--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 
 # Exclude personal analysis/recommendations
 plan-recommendation-analysis.md
+plan-recommendation-with-employer-contributions.md
 
 # Python
 __pycache__/
